<resources>

    <string name="app_name">secret-garden_vacation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camellia">꽃무릇</string>
    <string name="close">닫기</string>
    <string name="gardenshop">"   Shop"</string>
    <string name="Seasoncourse">"  Season"</string>
    <string name="Recommendedcourse">Course</string>
    <string name="Plantinformation">"   Plant"</string>
    <string name="QRscan">QR scan</string>
    <string name="centralplaza">central plaza</string>
    <string name="childrengarden">"  children's garden"</string>
    <string name="EcoCenter">Eco Center</string>
    <string name="EndangeredBotanicalGarden">Endangered Botanical Garden</string>
    <string name="FiveSensesGarden">Five Senses Garden</string>
    <string name="forestpavilion">forest pavilion</string>
    <string name="AUTUMNBOTANIC">AUTUMN BOTANIC</string>
    <string name="gardencafe">Garden cafe</string>
    <string name="gardencenter">garden center</string>
    <string name="Grass">Grass Pum Jongwon</string>
    <string name="Feeinformation">Fee information</string>
    <string name="Winterrateguide">Winter rate guide</string>
    <string name="freeentry">free entry</string>
    <string name="discountadmission">discount admission</string>
    <string name="etc">etc</string>
    <string name="Visitinghours">Visiting hours</string>
    <string name="Aboutgarden">About the botanical garden</string>
    <string name="foundinginstitution">founding institution</string>
    <string name="Purposeofestablishment">Purpose of establishment</string>
    <string name="WhatShingu">What Shingu University Botanical Garden does</string>
    <string name="sizeandlocation">size and location</string>
    <string name="annualmembership">annual membership</string>
    <string name="Howtojoin">How to join</string>
    <string name="Applyfor">Apply for on-site visit</string>
    <string name="Payment">Payment (payment on the spot)</string>
    <string name="Annualmembershipcard">Annual membership card issuance</string>
    <string name="VisitShinguUniversityBotanicalGarden">Visit Shingu University Botanical Garden</string>
    <string name="Annualmemberbenefits">Annual member benefits</string>
    <string name="Notice">Notice</string>
    <string name="Precautionsforviewing">Precautions for viewing</string>
    <string name="GetDirections">Get Directions</string>
    <string name="Whenusingpublictransportation">When using public transportation</string>
    <string name="herbalgarden">herbal garden</string>
    <string name="highrise">guide</string>
    <string name="festivalofmonth">festival of the month</string>
    <string name="todayssteps">today\'s steps</string>
    <string name="Todaysworkout">Today\'s workout</string>
    <string name="step">"  step"</string>
    <string name="sweetpotato">sweet potato</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="Gentian">Gentian</string>
    <string name="barberry">barberry</string>
    <string name="viburnum">viburnum</string>
    <string name="Gathering">Gathering</string>
    <string name="DanyangWormwood">Danyang Wormwood</string>
    <string name="Gomari">Goma-ri</string>
    <string name="Guwatailgrass">Guwatail grass</string>
    <string name="Dongjaflower">Dongja flower</string>
    <string name="HeuksanDobibichu">Heuksan Dobibichu</string>
    <string name="pricklylotus">prickly lotus</string>
    <string name="Azalea">Azalea</string>
    <string name="kkkkwaul">kkkkwaul</string>
    <string name="hepatica">hepatica</string>
    <string name="stoneleaves">stone leaves</string>
    <string name="daffodil">daffodil</string>
    <string name="cartoon">cartoon</string>
    <string name="WhiteSeohyang">White Seohyang</string>
    <string name="JejuYangjiFlower">Jeju Yangji Flower</string>
    <string name="longevitycartoon">longevity cartoon</string>
    <string name="guardianreef">guardian reef</string>
    <string name="herey">herey</string>
    <string name="magnolia">magnolia</string>
    <string name="battree">bat tree</string>
    <string name="sapwood">sapwood</string>
    <string name="stonethorn">stone thorn</string>
    <string name="cloves">cloves</string>
    <string name="islandlake">island lake</string>
    <string name="Giraffecho">Giraffecho</string>
    <string name="thyme">thyme</string>
    <string name="waterspinach">water spinach</string>
    <string name="claw">claw</string>
    <string name="Glyphs">Glyphs</string>
    <string name="chickflowertree">chick flower tree</string>
    <string name="naval">naval</string>
    <string name="BabyCamellia">Baby Camellia</string>
    <string name="multipleplants">multiple plants</string>
    <string name="lilacgarden">lilac garden</string>
    <string name="Flowerhabitat">Flowerhabitat</string>
    <string name="mapletreeroad">maple tree road</string>
    <string name="MetasequoiaRoad">Metasequoia Road</string>
    <string name="hydrangea">hydrangea</string>
    <string name="Observatory">Observatory</string>
    <string name="parkinglot">Parking lot</string>
    <string name="peonygarden">peony garden</string>
    <string name="flowerpot">flower pot</string>
    <string name="autumnbotanicalgarden">autumn botanical garden</string>
    <string name="liberation">liberation</string>
    <string name="Autumnrides">Autumn rides with the scent of chrysanthemums</string>
    <string name="skygarden">sky garden</string>
    <string name="SilverSaewon">Silver Saewon</string>
    <string name="toadfountain">toad fountain</string>
    <string name="toilet">Toilet</string>
    <string name="traditionalgarden">traditional garden</string>
    <string name="arboretum">arboretum</string>
    <string name="vineyard">vineyard</string>
    <string name="VistaGarden">Vista Garden</string>
    <string name="wetlandecologygarden">wetland ecology garden</string>
    <string name="Visitinginformation">"  Guide"</string>
    <string name="Aboutthebotanicalgarden">About the botanical garden</string>
    <string name="Visitinginform">Visiting information</string>
    <string name="Feeinform">Fee information</string>
    <string name="annualmember">Annual membership</string>
    <string name="Viewall">View all</string>
    <string name="Recommended">Course</string>
    <string name="Facilities">Facilities</string>
    <string name="Children">Children</string>
    <string name="Senior">Senior</string>
    <string name="grouptour">Group tour</string>
    <string name="Couple">Couple</string>
    <string name="trail">Trail</string>
    <string name="Spring">Spring</string>
    <string name="Summer">Summer</string>
    <string name="WeatherC">Course</string>
    <string name="Fall">Fall</string>
    <string name="Winter">Winter</string>
    <string name="clusterofflowers">cluster of flowers</string>
    <string name="baby">" A gift-like plant to meet in December, the Arabidopsis Camellia"</string>
    <string name="gift">" A gift-like plant to meet in December, Naksanhong"</string>

</resources>