<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="550dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/thingreen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/daffodil"
            android:textColor="@color/backgroundgray"
            android:textSize="24dp"
            android:textStyle="normal" />

        <ImageButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:background="@android:color/transparent"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ispd2_img1"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/ispd2_img2"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_marginTop="10dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/soo_back"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:background="@color/thingreen"
                android:text="@string/back"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/soo_next"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="@string/next"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:background="@color/thingreen" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>