<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/h_guide"
            android:layout_width="@dimen/homebtnsize"
            android:layout_height="@dimen/homebtnsize"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="12.5dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/home_guide" />

        <ImageButton
            android:id="@+id/h_weathercourse"
            android:layout_width="@dimen/homebtnsize"
            android:layout_height="@dimen/homebtnsize"
            android:layout_marginLeft="12.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="12.5dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/home_weather" />

        <ImageButton
            android:id="@+id/h_course"
            android:layout_width="@dimen/homebtnsize"
            android:layout_height="@dimen/homebtnsize"
            android:layout_marginLeft="12.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="12.5dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/home_course" />

        <ImageButton
            android:id="@+id/h_info"
            android:layout_width="@dimen/homebtnsize"
            android:layout_height="@dimen/homebtnsize"
            android:layout_marginLeft="12.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="12.5dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/home_info" />

        <ImageButton
            android:id="@+id/h_shop"
            android:layout_width="@dimen/homebtnsize"
            android:layout_height="@dimen/homebtnsize"
            android:layout_marginLeft="12.5dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/home_shop" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="53dp"
            android:layout_marginRight="13dp"
            android:gravity="center_horizontal"
            android:text="@string/Visitinginformation"
            android:textAlignment="center"
            android:textColor="@color/textcolor"
            android:textSize="12dp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="53dp"
            android:layout_marginRight="13dp"
            android:gravity="center_horizontal"
            android:text="@string/Seasoncourse"
            android:textAlignment="center"
            android:textColor="@color/textcolor"
            android:textSize="12dp" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="53dp"
            android:layout_marginRight="13dp"
            android:gravity="center_horizontal"
            android:text="@string/Recommendedcourse"
            android:textAlignment="center"
            android:textColor="@color/textcolor"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="53dp"
            android:layout_marginRight="13dp"
            android:gravity="center_horizontal"
            android:text="@string/Plantinformation"
            android:textAlignment="center"
            android:textColor="@color/textcolor"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="53dp"
            android:gravity="center_horizontal"
            android:text="@string/gardenshop"
            android:textAlignment="center"
            android:textColor="@color/textcolor"
            android:textSize="12dp" />

    </LinearLayout>


</FrameLayout>