<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green2"
        app:contentInsetStart="10dp">

        <ImageButton
            android:id="@+id/intro_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/green2"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/Aboutgarden"
            android:textColor="@color/backgroundgray"
            android:textFontWeight="@android:integer/status_bar_notification_info_maxnum"
            android:textSize="23dp"
            android:textStyle="normal" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/backgroundgreen"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/intro_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="115dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    app:srcCompat="@drawable/leaf" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/titleunderline"
                    android:ems="10"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/bmjua"
                    android:inputType="textPersonName"
                    android:text="@string/foundinginstitution"
                    android:textColor="@color/leafgreen"
                    android:textSize="22dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/text"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="115dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:background="#00000000"
                    app:srcCompat="@drawable/leaf" />

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/titleunderline"
                    android:ems="10"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/bmjua"
                    android:inputType="textPersonName"
                    android:text="@string/Purposeofestablishment"
                    android:textColor="@color/leafgreen"
                    android:textSize="22dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/text2"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="410dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:background="#00000000"
                    app:srcCompat="@drawable/leaf" />

                <EditText
                    android:id="@+id/editTextTextPersonName3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/titleunderline"
                    android:ems="10"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/bmjua"
                    android:inputType="textPersonName"
                    android:text="@string/WhatShingu"
                    android:textColor="@color/leafgreen"
                    android:textSize="22dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/text3"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lineSpacingExtra="8dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="195dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:background="#00000000"
                    app:srcCompat="@drawable/leaf" />

                <EditText
                    android:id="@+id/editTextTextPersonName4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/titleunderline"
                    android:ems="10"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/bmjua"
                    android:inputType="textPersonName"
                    android:text="@string/sizeandlocation"
                    android:textColor="@color/leafgreen"
                    android:textSize="22dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/text4"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="15dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>